Closed
Bug 1178274
Opened 10 years ago
Closed 10 years ago
Properly check for APZ enabled when doing decode-only-on-draw
Categories
(Core :: Panning and Zooming, defect)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
mozilla42
| Tracking | Status | |
|---|---|---|
| firefox42 | --- | fixed |
People
(Reporter: kats, Assigned: kats)
References
Details
Attachments
(2 files)
|
1.49 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
|
1.49 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
The AsyncPanZoomEnableDoNotUseDirectly() call in ImageFactory.cpp means that if the APZ pref is enabled but e10s is disabled, we still enable decode-only-on-draw. We shouldn't do this. This appears to be why the layout/reftests/image/image-orientation-border-image.html?90&flip reftest fails on Mac and Windows when the APZ pref is enabled. (It doesn't fix the problem on Linux R-e10s though; I suspect that the reftest harness just doesn't wait for the image decoding before taking its snapshot, causing the test failure - we can fix that in bug 1177323).
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8627180 -
Flags: review?(dvander)
| Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8627180 [details] [diff] [review]
Part 2 - Patch
Oh, this appears to be called on non-main thread in some xpcshell tests and crashes.
Attachment #8627180 -
Flags: review?(dvander)
| Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8627225 -
Flags: review?(wmccloskey)
| Assignee | ||
Updated•10 years ago
|
Attachment #8627180 -
Attachment description: Patch → Part 2 - Patch
Attachment #8627180 -
Flags: review?(dvander)
Attachment #8627225 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Updated•10 years ago
|
Blocks: apz-windows, 1157746
Updated•10 years ago
|
Attachment #8627180 -
Flags: review?(dvander) → review+
https://hg.mozilla.org/mozilla-central/rev/6d72455a884e
https://hg.mozilla.org/mozilla-central/rev/e51ef562f1c5
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•